--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,8 @@ language: fi
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Nordenskiöldin matkat ja retket napamerillä
 
   Nuorisolle kerrottuina'
